--- a/src/main/resources/App.fxml
+++ b/src/main/resources/App.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
-<GridPane fx:controller="cn.chenc.performs.controller.AppController"
+<GridPane fx:id="rootGridPane" fx:controller="cn.chenc.performs.controller.AppController"
           stylesheets="App.css"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
     <VBox prefHeight="40">
