--- a/src/main/resources/setup.fxml
+++ b/src/main/resources/setup.fxml
@@ -50,6 +50,18 @@
             <AnchorPane minWidth="130"></AnchorPane>
             <CheckBox fx:id="animationOpenCheckBox" prefWidth="5"  alignment="CENTER_RIGHT"></CheckBox>
         </HBox>
+        <HBox minHeight="30">
+            <Label fx:id="animationTypeLabel" text="动画类型" minWidth="100" alignment="CENTER" ></Label>
+            <ChoiceBox fx:id="animationTypeChoiceBox" minWidth="150" maxWidth="150"  >
+                <items>
+                    <FXCollections fx:factory="observableArrayList">
+<!--                        <String fx:value="黑客帝国"></String>-->
+<!--                        <String fx:value="雪花飘落"></String>-->
+<!--                        <String fx:value="樱花飘落"></String>-->
+                    </FXCollections>
+                </items>
+            </ChoiceBox>
+        </HBox>
         <HBox minHeight="50"  alignment="BOTTOM_LEFT">
             <Button fx:id="resetConfig" onAction="#resetConfigAction" text="重置" minWidth="100"></Button>
         </HBox>
