--- a/src/main/resources/Setup.css
+++ b/src/main/resources/Setup.css
@@ -1,5 +1,21 @@
 .root{
     -fx-background-color: rgb(0, 0, 0);
+    -fx-fill: null;
+}
+
+.scroll-pane{
+    -fx-fit-to-width: true;
+    -fx-fit-to-height: true;
+}
+
+.scroll-pane .viewport{
+    -fx-background-color: #000000;
+}
+
+.ScrollPane{
+    -fx-background-color: rgb(0, 0, 0);
+    -fx-fill: null;
+    -fx-text-alignment: center;
 }
 
 
