新增功能： 主面板显示设置 修改主面板部分显示信息
修复bug：
修复关闭设置界面后，拖拽勾选未取消问题

--- a/src/main/resources/App.css
+++ b/src/main/resources/App.css
@@ -9,6 +9,11 @@
     -fx-font-weight: bold;
 }
 
+#cpuName{
+    -fx-font-size: 14;
+    -fx-font-weight: none;
+}
+
 /*系统logo*/
 #SystemLogo{
     -fx-font-size: 7;
