--- a/src/main/resources/App.fxml
+++ b/src/main/resources/App.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.image.Image?>
 <FlowPane fx:id="rootFlowPane" fx:controller="cn.chenc.performs.controller.AppController"
           stylesheets="App.css"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+          xmlns:fx="http://javafx.com/fxml" alignment="TOP_CENTER" hgap="10" vgap="10">
 <!--    <VBox prefHeight="40">-->
 <!--        <ImageView fx:id="SystemLogo" fitHeight="150.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">-->
 
@@ -37,13 +37,14 @@
 <!--    </VBox>-->
 
 
-        <HBox maxHeight="150" alignment="CENTER">
+        <HBox fx:id="systemInfoHbox" maxHeight="150" alignment="CENTER">
             <ImageView fx:id="SystemLogo" fitHeight="150.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
 
             </ImageView>
             <Label fx:id="SystemInfo" alignment="CENTER"></Label>
         </HBox>
-        <VBox maxHeight="250">
+        <VBox fx:id="cpuVBox" maxHeight="250">
+            <Label fx:id="cpuName" />
             <Label fx:id="CPU" />
             <AreaChart fx:id="cpuChart" id="cpuChart" maxWidth="350" maxHeight="200" >
                 <xAxis >
@@ -54,7 +55,7 @@
                 </yAxis>
             </AreaChart>
         </VBox>
-        <VBox maxHeight="250">
+        <VBox fx:id="ramVBox" maxHeight="250">
             <Label fx:id="RAM" />
             <AreaChart fx:id="ramChart" id="ramChart"  maxWidth="350" maxHeight="200" >
                 <xAxis>
