修复bug： 设置logo，重启后不会显示系统信息。
体验优化：
动画屏幕初始化坐标调整

--- a/src/main/resources/App.css
+++ b/src/main/resources/App.css
@@ -9,6 +9,10 @@
     -fx-font-weight: bold;
 }
 
+#SystemInfo{
+    -fx-font-size: 14;
+}
+
 #cpuName{
     -fx-font-size: 14;
     -fx-font-weight: none;
