--- a/src/main/resources/fxml/setup.fxml
+++ b/src/main/resources/fxml/setup.fxml
@@ -128,11 +128,26 @@
                     <Label fx:id="codeRainTextLabel" text="代码雨颜色" minWidth="100" alignment="CENTER" ></Label>
                     <ColorPicker fx:id="codeRainTextColor"  minWidth="150" maxWidth="200"></ColorPicker>
                 </HBox>
-                <Label text="视频壁纸"></Label>
-                <HBox minHeight="30" >
+                <Label text="动态壁纸"></Label>
+                <HBox minHeight="40">
+                    <Label text="壁纸类型" minWidth="100" alignment="CENTER" ></Label>
+                    <ChoiceBox fx:id="wallpaperTypeChoiceBox" onAction="#wallpaperTypeAction" minWidth="150" maxWidth="150"  >
+                        <items>
+                            <FXCollections fx:factory="observableArrayList">
+
+                            </FXCollections>
+                        </items>
+                    </ChoiceBox>
+                </HBox>
+                <HBox fx:id="mediaHBox" minHeight="30" >
                     <Button onAction="#checkMediaAction" text="选择壁纸" minWidth="100"></Button>
                     <TextField fx:id="mediaPath" minWidth="150" maxWidth="150" prefWidth="30" disable="true"></TextField>
                     <Button fx:id="resetMedia" onAction="#resetMediaAction" text="清空" minWidth="40"></Button>
+                </HBox>
+                <HBox fx:id="webHBox" minHeight="30" >
+                    <Button onAction="#checkWebAction" text="选择壁纸" minWidth="100"></Button>
+                    <TextField fx:id="webPath" minWidth="150" maxWidth="150" prefWidth="30" disable="true"></TextField>
+                    <Button fx:id="resetWeb" onAction="#resetWebAction" text="清空" minWidth="40"></Button>
                 </HBox>
                 <HBox minHeight="50" alignment="CENTER_LEFT">
                     <Button fx:id="resetConfig" onAction="#resetConfigAction" text="重置" minWidth="100"></Button>
