--- a/src/main/resources/App.fxml
+++ b/src/main/resources/App.fxml
@@ -11,38 +11,27 @@
 <FlowPane fx:id="rootFlowPane" fx:controller="cn.chenc.performs.controller.AppController"
           stylesheets="App.css"
           xmlns:fx="http://javafx.com/fxml" alignment="TOP_CENTER" hgap="10" vgap="10">
-<!--    <VBox prefHeight="40">-->
-<!--        <ImageView fx:id="SystemLogo" fitHeight="150.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">-->
+        <VBox fx:id="systemInfoVbox" alignment="CENTER_LEFT">
+            <HBox fx:id="systemInfoHbox" maxHeight="150" alignment="CENTER_LEFT">
+                <ImageView fx:id="SystemLogo" fitHeight="150.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
+                </ImageView>
+                <VBox fx:id="datetimeVbox" alignment="CENTER">
+                    <HBox>
+                        <Label fx:id="timeLabel" text="09:48:35"></Label>
+                    </HBox>
+                    <HBox>
+                        <Label fx:id="dateLabel" text="2021/01/01"></Label>
+                    </HBox>
+                    <HBox>
+                        <Label fx:id="weekLabel"  text="星期四"></Label>
+                    </HBox>
+                </VBox>
+            </HBox>
+            <HBox>
+                <Label fx:id="SystemInfo" alignment="TOP_LEFT"></Label>
+            </HBox>
+        </VBox>
 
-<!--        </ImageView>-->
-<!--        <Label fx:id="SystemInfo"></Label>-->
-<!--        <Label fx:id="CPU" />-->
-<!--        <AreaChart fx:id="cpuChart" id="cpuChart" >-->
-<!--            <xAxis >-->
-<!--                <NumberAxis side="BOTTOM" />-->
-<!--            </xAxis>-->
-<!--            <yAxis>-->
-<!--                <NumberAxis side="LEFT"/>-->
-<!--            </yAxis>-->
-<!--        </AreaChart>-->
-<!--        <Label fx:id="RAM" />-->
-<!--        <AreaChart fx:id="ramChart" id="ramChart" >-->
-<!--            <xAxis>-->
-<!--                <NumberAxis side="BOTTOM" />-->
-<!--            </xAxis>-->
-<!--            <yAxis>-->
-<!--                <NumberAxis side="LEFT"/>-->
-<!--            </yAxis>-->
-<!--        </AreaChart>-->
-<!--    </VBox>-->
-
-
-        <HBox fx:id="systemInfoHbox" maxHeight="150" alignment="CENTER">
-            <ImageView fx:id="SystemLogo" fitHeight="150.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
-
-            </ImageView>
-            <Label fx:id="SystemInfo" alignment="CENTER"></Label>
-        </HBox>
         <VBox fx:id="cpuVBox" maxHeight="250">
             <Label fx:id="cpuName" />
             <Label fx:id="CPU" />
